fixing delete message position (on mobile)

--- a/styles/index.css
+++ b/styles/index.css
@@ -28,7 +28,7 @@
 }
 body {
   background-color: var(--background-primary);
-  overflow: hidden;
+  height: 100vh;
 }
 
 .logo {
@@ -56,7 +56,7 @@ body {
   display: flex;
   flex-direction: column;
   max-width: 631px;
-  max-height: 512px;
+  height: 100vh;
   justify-self: center;
   align-items: flex-start;
   margin-top: 57px;
@@ -158,54 +158,6 @@ input {
   padding: 11px 18px;
 }
 
-@media (width < 1280px) {
-  .logo {
-    display: none;
-  }
-  #container {
-    display: flex;
-    flex-direction: column;
-    margin: 76px auto auto auto;
-    max-width: 327px;
-    height: 526px;
-  }
-  .add-itn {
-    display: flex;
-    flex-direction: column;
-    max-width: 327px;
-  }
-  .input-add {
-    max-width: 327px;
-  }
-  .add-btn {
-    max-width: 327px;
-    width: 100%;
-  }
-  ul {
-    max-width: 327px;
-    height: 264px;
-    width: 100%;
-    overflow-y: auto;
-    &::-webkit-scrollbar {
-      width: 6px;
-    }
-    &::-webkit-scrollbar-thumb {
-      background: var(--color-brand);
-      border-radius: 10px;
-    }
-  }
-
-  li {
-    max-width: 327px;
-    width: 100%;
-    margin-right: 0;
-  }
-  .delete {
-    width: 18px;
-    height: 18px;
-  }
-}
-
 .deleteLi {
   width: 627px;
   height: 44px;
@@ -236,4 +188,75 @@ input {
   position: absolute;
   right: 16px;
   top: 12px;
+}
+
+@media (width < 1280px) {
+  .logo {
+    display: none;
+  }
+  #container {
+    display: flex;
+    flex-direction: column;
+    margin: 76px auto auto auto;
+    max-width: 327px;
+    height: 526px;
+  }
+  .add-itn {
+    display: flex;
+    flex-direction: column;
+    max-width: 327px;
+  }
+  .input-add {
+    max-width: 327px;
+  }
+  .add-btn {
+    max-width: 327px;
+    width: 100%;
+  }
+  ul {
+    max-width: 327px;
+    min-height: 264px;
+    height: 264px;
+    width: 100%;
+    gap: 12px;
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+      width: 6px;
+    }
+    &::-webkit-scrollbar-thumb {
+      background: var(--color-brand);
+      border-radius: 10px;
+    }
+  }
+
+  li {
+    min-height: 57px;
+    max-width: 327px;
+    height: 57px;
+    width: 100%;
+    margin-right: 0;
+  }
+  .span-txt,
+  .check {
+    top: 33%;
+  }
+
+  .delete {
+    width: 23px;
+    height: 23px;
+    top: 33%;
+  }
+  .deleteLi {
+    width: 327px;
+    height: 44px;
+    min-height: 44px;
+  }
+  .deleteImg {
+    top: 12px;
+  }
+  .closeDelete {
+    top: 12px;
+    width: 23px;
+    height: 23px;
+  }
 }
